# allure-report-host

./: Dockerfile  README.md  docker-compose.staging.yml  docker-compose.yml
.github/actions/publish-allure-report/: action.yml
.github/workflows/: build-and-deploy.yml  build-and-test.yml  build.yml  deploy-staging.yml
api/: .env.example  Cargo.toml
api/src/: lib.rs  main.rs  route.rs
api/src/handlers/: manifest.rs  report_handler.rs
api/src/helpers/: access_control.rs  allure_config.rs  allure_generator.rs  fs_helper.rs  zip_helper.rs
api/src/models/: report.rs
api/src/routes/: report_route.rs
api/src/services/: report_service.rs
api/tests/: smoke.rs
data/: index.html
scripts/: publish-report.sh
